Fix bug #27237: Working with simplexml crashes apache2 object dtor must be used to cleanup iterator data correctly Fix asXML() outputing incorrect node